--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.10.1",
     "socket.io-client": "^4.8.1",
+    "styled-components": "^6.1.19",
     "yup": "^1.7.1",
     "zustand": "^5.0.9"
   },
