--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -9,6 +9,8 @@ lerna-debug.log*
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
+# NOTES
+erasour.io.txt
 # Runtime data
 pids
 *.pid
