--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,9 @@
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
-    "fabric": "^6.9.0",
+    "fabric": "^6.9.1",
     "formik": "^2.4.9",
+    "lucide": "^0.562.0",
     "lucide-react": "^0.561.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -26,6 +27,7 @@
     "react-router-dom": "^7.10.1",
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.19",
+    "tech-stack-icons": "^3.3.2",
     "yup": "^1.7.1",
     "zustand": "^5.0.9"
   },
